--- a/index.html
+++ b/index.html
@@ -3,7 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Flower Market</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <!-- nav bar -->
+      <nav class="flex justify-center gap-[400px]">
+        <figure>
+          <img src="assets/logo.jpg" alt="" />
+        </figure>
+        <div>
+          <ul class="flex gap-[50px] text-xl p-5">
+            <li><a href="#">home </a></li>
+            <li><a href="">shop</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href=""></a>card</li>
+          </ul>
+        </div>
+      </nav>
+      <!-- bannar -->
+      <div class="flex justify-center gap-[30px] p-20">
+        <!-- bannar-left -->
+
+        <div class="text-left">
+          <h3 class="text-4xl">
+            ALWAYS
+            <span class="text-orange-600">
+              FRESH <br />
+              FLOWERS</span
+            >
+          </h3>
+          <p class="">
+            Indulge your senses with the beauty and fragrance of <br />
+            our fresh flower shop. From classic roses to exotic <br />
+            blooms, we offer a wide variety of fresh flowers that <br />
+            are perfect for any occasion.
+          </p>
+        </div>
+        <!-- bannar-right -->
+        <figure>
+          <img src="assets/hero-flower.png" alt="" />
+        </figure>
+      </div>
+    </header>
+    <main>
+      <!-- plant -->
+      <h3 class="text-center text-3xl">
+        <span class="text-orange-600">Our</span> Plants
+      </h3>
+      <p class="text-center">
+        Indulge your senses with the beauty and fragrance of our fresh flower
+        shop. From <br />classic roses to exotic blooms, we offer a wide variety
+        of fresh.
+      </p>
+      <!-- items -->
+      <div>
+        <figure>
+          <img src="assets/sample-flower-image.png" alt="" />
+        </figure>
+        <p>Lily Blossom</p>
+        <p>20 USD</p>
+        <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+      </div>
+    </main>
+    <footer>
+      <!-- subcribe -->
+      <!-- footer -->
+    </footer>
+  </body>
 </html>
