--- a/index.html
+++ b/index.html
@@ -58,17 +58,138 @@
         of fresh.
       </p>
       <!-- items -->
-      <div>
-        <figure>
-          <img src="assets/sample-flower-image.png" alt="" />
-        </figure>
-        <p>Lily Blossom</p>
-        <p>20 USD</p>
-        <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+      <div class="flex">
+        <!-- start -->
+        <div>
+          <figure>
+            <img src="assets/sample-flower-image.png" alt="" />
+          </figure>
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+        </div>
+        <!-- 2nd -->
+        <div>
+          <figure>
+            <img src="assets/sample-flower-image.png" alt="" />
+          </figure>
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+        </div>
+        <!-- 3rd -->
+        <div>
+          <figure>
+            <img src="assets/sample-flower-image.png" alt="" />
+          </figure>
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+        </div>
+        <!-- 4th -->
+        <div>
+          <figure>
+            <img src="assets/sample-flower-image.png" alt="" />
+          </figure>
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+        </div>
+        <!-- 5th -->
+        <div>
+          <figure>
+            <img src="assets/sample-flower-image.png" alt="" />
+          </figure>
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+        </div>
+        <!-- 6th -->
+        <div>
+          <figure>
+            <img src="assets/sample-flower-image.png" alt="" />
+          </figure>
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+        </div>
+        <!-- 7th -->
+        <div>
+          <figure>
+            <img src="assets/sample-flower-image.png" alt="" />
+          </figure>
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+        </div>
+        <!-- 8th -->
+        <div>
+          <figure>
+            <img src="assets/sample-flower-image.png" alt="" />
+          </figure>
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
+        </div>
       </div>
+      <!-- lover -->
+      <section>
+        <div class="flex p-10">
+          <!-- right -->
+          <figure>
+            <img src="assets/flower-store.png" alt="" />
+          </figure>
+          <!-- left -->
+          <div>
+            <h3 class="text-4xl">Flower & Plants br Lover</h3>
+            <ul>
+              <li>
+                Indulge your senses with the beauty <br />
+                and fragrance of our fresh flower shop. From classic <br />
+                roses to exotic blooms, we offer a wide variety <br />
+                of fresh.
+              </li>
+              <li>
+                Indulge your senses with the beauty <br />
+                and fragrance of our fresh flower shop. From classic <br />
+                roses to exotic blooms, we offer a wide variety <br />
+                of fresh.
+              </li>
+              <li>
+                Indulge your senses with the beauty <br />
+                and fragrance of our fresh flower shop. From classic <br />
+                roses to exotic blooms, we offer a wide variety <br />
+                of fresh.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- deals -->
+      <section>
+        <p class="text-center text-4xl">
+          <span class="text-orange-600">Latest</span> Deals
+        </p>
+        <p class="text-center">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From <br />
+          classic roses to exotic blooms, we offer a wide variety of fresh.
+        </p>
+      </section>
+      <!-- 3 picture -->
+      <section>
+        <figure>
+          <img src="assets/deal-bloom.png" alt="" />
+          <img src="assets/deal-ana.png" alt="" />
+          <img src="assets/deal-zabo.png" alt="" />
+        </figure>
+      </section>
     </main>
     <footer>
       <!-- subcribe -->
+      <div class="text-4xl text-center bg-[url(assets/news-letter-bg.png)]">
+        Join the colorful Bunch
+      </div>
       <!-- footer -->
     </footer>
   </body>
