--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
     <main>
       <!-- plant -->
-      <h3 class="text-center text-3xl">
+      <h3 class="text-center text-3xl py-4">
         <span class="text-orange-600">Our</span> Plants
       </h3>
       <p class="text-center">
@@ -58,74 +58,108 @@
         of fresh.
       </p>
       <!-- items -->
-      <div class="flex">
+      <div
+        class="max-w-[1320px] max-auto grid lg:grid-cols-4 md:grid-cols-2 p-30 text-center"
+      >
         <!-- start -->
-        <div>
-          <figure>
-            <img src="assets/sample-flower-image.png" alt="" />
+        <div class="p-4 shadow-lg">
+          <figure class="center overflow-hidden">
+            <img
+              src="assets/sample-flower-image.png"
+              class="hover:scale-125"
+              alt=""
+            />
           </figure>
           <p>Lily Blossom</p>
           <p>20 USD</p>
           <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
         </div>
         <!-- 2nd -->
-        <div>
-          <figure>
-            <img src="assets/sample-flower-image.png" alt="" />
+        <div class="p-4 shadow-lg">
+          <figure class="overflow-hidden">
+            <img
+              src="assets/sample-flower-image.png"
+              class="hover:scale-125"
+              alt=""
+            />
           </figure>
           <p>Lily Blossom</p>
           <p>20 USD</p>
           <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
         </div>
         <!-- 3rd -->
-        <div>
-          <figure>
-            <img src="assets/sample-flower-image.png" alt="" />
+        <div class="p-4 shadow-lg">
+          <figure class="overflow-hidden">
+            <img
+              src="assets/sample-flower-image.png"
+              class="hover:scale-125"
+              alt=""
+            />
           </figure>
           <p>Lily Blossom</p>
           <p>20 USD</p>
           <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
         </div>
         <!-- 4th -->
-        <div>
-          <figure>
-            <img src="assets/sample-flower-image.png" alt="" />
+        <div class="p-4 shadow-lg">
+          <figure class="overflow-hidden">
+            <img
+              src="assets/sample-flower-image.png"
+              class="hover:scale-125"
+              alt=""
+            />
           </figure>
           <p>Lily Blossom</p>
           <p>20 USD</p>
           <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
         </div>
         <!-- 5th -->
-        <div>
-          <figure>
-            <img src="assets/sample-flower-image.png" alt="" />
+        <div class="p-4 shadow-lg">
+          <figure class="overflow-hidden">
+            <img
+              src="assets/sample-flower-image.png"
+              class="hover:scale-125"
+              alt=""
+            />
           </figure>
           <p>Lily Blossom</p>
           <p>20 USD</p>
           <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
         </div>
         <!-- 6th -->
-        <div>
-          <figure>
-            <img src="assets/sample-flower-image.png" alt="" />
+        <div class="p-4 shadow-lg">
+          <figure class="overflow-hidden">
+            <img
+              src="assets/sample-flower-image.png"
+              class="hover:scale-125"
+              alt=""
+            />
           </figure>
           <p>Lily Blossom</p>
           <p>20 USD</p>
           <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
         </div>
         <!-- 7th -->
-        <div>
-          <figure>
-            <img src="assets/sample-flower-image.png" alt="" />
+        <div class="p-4 shadow-lg">
+          <figure class="overflow-hidden">
+            <img
+              src="assets/sample-flower-image.png"
+              class="hover:scale-125"
+              alt=""
+            />
           </figure>
           <p>Lily Blossom</p>
           <p>20 USD</p>
           <button class="text-white bg-orange-600 p-2">ADD TO CARD</button>
         </div>
         <!-- 8th -->
-        <div>
-          <figure>
-            <img src="assets/sample-flower-image.png" alt="" />
+        <div class="p-4 shadow-lg">
+          <figure class="overflow-hidden">
+            <img
+              src="assets/sample-flower-image.png"
+              class="hover:scale-125"
+              alt=""
+            />
           </figure>
           <p>Lily Blossom</p>
           <p>20 USD</p>
@@ -133,15 +167,18 @@
         </div>
       </div>
       <!-- lover -->
-      <section>
+      <section class="p-30">
         <div class="flex p-10">
           <!-- right -->
           <figure>
             <img src="assets/flower-store.png" alt="" />
           </figure>
           <!-- left -->
-          <div>
-            <h3 class="text-4xl">Flower & Plants br Lover</h3>
+          <div class="p-30">
+            <h3 class="text-4xl">
+              Flower & Plants <br />
+              Lover
+            </h3>
             <ul>
               <li>
                 Indulge your senses with the beauty <br />
@@ -177,12 +214,12 @@
         </p>
       </section>
       <!-- 3 picture -->
-      <section>
-        <figure>
-          <img src="assets/deal-bloom.png" alt="" />
-          <img src="assets/deal-ana.png" alt="" />
-          <img src="assets/deal-zabo.png" alt="" />
+      <section class="flex gap-[10px] p-30">
+        <figure class="">
+          <img src="assets/deal-bloom.png" class="rounded-2xl" alt="" />
+          <img src="assets/deal-ana.png" class="pt-[10px] rounded-2xl" alt="" />
         </figure>
+        <img src="assets/deal-zabo.png" class="rounded-2xl" alt="" />
       </section>
     </main>
     <footer>
