--- a/index.html
+++ b/index.html
@@ -224,9 +224,22 @@
     </main>
     <footer>
       <!-- subcribe -->
-      <div class="text-4xl text-center bg-[url(assets/news-letter-bg.png)]">
-        Join the colorful Bunch
+      <div class="bg-[url(assets/news-letter-bg.png)] p-20">
+        <div class="text-6xl text-center text-white">
+          Join the colorful Bunch
+        </div>
+        <form action="" class="flex flex-col sm:flex-row p-5">
+          <input
+            type="email "
+            placeholder="Write email..."
+            class="bg-white px-50 py-4"
+          />
+          <button class="text-4xl bg-orange-600 text-white px-6 font-samibold">
+            subcribe
+          </button>
+        </form>
       </div>
+
       <!-- footer -->
     </footer>
   </body>
