--- a/index.html
+++ b/index.html
@@ -241,6 +241,46 @@
       </div>
 
       <!-- footer -->
-    </footer>
+  <footer>
+    <!-- div-1st -->
+<div class="grid grid-cols-4 p-20 ">
+       <div><figure>
+      <img src="assets/logo.jpg" alt="">
+    </figure>
+    <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+  </div>
+  <!-- 2nd div -->
+<div >
+    <ul 
+    >
+    <li>home</li>
+    <li>About us</li>
+    <li>Blog</li>
+    <li>FAQ</li>
+    <li>contact us</li>
+  </ul>
+</div>
+<!-- 3rd -->
+ <div>
+  <ul class=""> 
+    <li>Features</li> 
+     <li>Pricing</li>
+      <li>Privacy Policy</li>
+       <li>Terms of Service</li>
+        <li>Help Center</li>
+  </ul>
+ </div>
+ <!-- 4th -->
+ <div>
+  <figure class=" flex flex-row gap-[25px]">
+    <img src="assets/icon-linkedin.png" alt="">
+    <img src="assets/icon-twitter.png" alt="">
+    <img src="assets/icon-facebook.png" alt="">
+    <img src="assets/icon-youtube.png" alt="">
+  </figure>
+ </div>
+</div>
+ 
+  </footer>
   </body>
 </html>
